--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "bulma": "^0.9.4",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
